# monolayers

./: .gitignore  CLAUDE.md  Cargo.toml  flake.nix
crates/monolayers-client/: Cargo.toml
crates/monolayers-client/src/: main.rs
crates/monolayers-core/: Cargo.toml
crates/monolayers-core/src/: backend.rs  config.rs  lib.rs  store.rs  watcher.rs
crates/monolayers-server/: Cargo.toml
crates/monolayers-server/src/: api.rs  backend.rs  config.rs  main.rs  policy.rs  reconciler.rs
scripts/: test-nc.nu
src/: api.rs  backend.rs  config.rs  main.rs  policy.rs  reconciler.rs  store.rs  watcher.rs
