[package]
name = "monolayers-core"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sled = "0.34.7"
tokio = { version = "1.50.0", features = ["sync"] }
toml = "1.1.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
