[package]
name = "monolayers-server"
version = "0.1.0"
edition = "2024"

[dependencies]
monolayers-core = { path = "../monolayers-core" }
notify = "8.2.0"
quick-xml = { version = "0.39.2", features = ["serialize"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
url = { version = "2.5.8", features = ["serde"] }
walkdir = "2.5.0"
